fixed footer alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,6 @@
 #footer {
     background-color: #310A31;
     padding: 2rem;
-    position: absolute;
-    bottom: 0;
     width: 100%;
 }
 
